Add login link to footer in _base.html

--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -77,7 +77,12 @@
         </div>
 
         <div id="footer">
+            <div>
             {{ tougcomsys.FOOTER_CONTENT|safe }}
+            </div>
+            <div>
+            <a href="{% url 'login'%}">Log in</a>
+            </div>
         </div>
     </body>
 </html>
