--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -81,7 +81,11 @@
             {{ tougcomsys.FOOTER_CONTENT|safe }}
             </div>
             <div>
-            <a href="{% url 'login'%}">Log in</a>
+                {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}?next={{ request.path }}">Log Out</a>
+                {% else %}
+                <a href="{% url 'login' %}?next={{ request.path }}">Log in</a>
+                {% endif %}
             </div>
         </div>
     </body>
