--- a/templates/tougcomsys/firsthome/article_form_page4.html
+++ b/templates/tougcomsys/firsthome/article_form_page4.html
@@ -2,42 +2,74 @@
 {% load static %}
 
 {% block content %}
-    <h3>{{ object }}</h3>
     <script src='{% static 'touglates\touglates.js' %}'></script>
     <div class="form">
-        <form id="frm_article" method="POST">
-        {{ form.media }}
-        {% csrf_token %}
-        {% for field in form.hidden_fields %}
-        {{ field }}
-        {% endfor %}
-
-        {{ articleeventdates.management_form }}
-        {% for form in articleeventdates.forms %}
         {% if form.errors %}{{ form.errors }}{% endif %}
-            <div id="div_articleeventdate_{{ forloop.counter }}">
-                {{ form.id }}
-                {% include 'touglates/form_field.html' with field=form.whendate  %}
-                {% include 'touglates/form_field.html' with field=form.whentime  %}
-                {% include 'touglates/form_field.html' with field=form.timelen  %}
+        <form id="frm_article" method="POST">
+            {{ form.media }}
+            {% csrf_token %}
+            {% for field in form.hidden_fields %}
+            {{ field }}
+            {% endfor %}
+
+            <div id="div_show_author">
+                {% include 'touglates/form_field.html' with field=form.descriptive_date label_tag=form.discriptive_date.label_tag %}
             </div>
-
-        {% endfor %}
-
-        {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Save and Continue</button>' %}
-    </form>
-    </div>
-    <script>
-        addRelatedPopupButton( 'id_list_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-        addRelatedPopupButton( 'id_detail_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-        addRelatedPopupButton( 'id_featured_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-        function getControlIdsForPopups(modelName) {
-            controlIds={
-                'Image': ['id_list_image', 'id_detail_image', 'id_featured_image'],
+            {{ articleeventdates.management_form }}
+            {% for articleeventdateform in articleeventdates.forms %}
+            {% if articleeventdateform.id.value > 0 %}
+              <div id="div_articleeventdateform_{{ articleeventdateform.id.value }}" class="articleeventdateformsetform"  >
+                {% for hiddenfield in articleeventdateform.hidden_fields %}
+                  {{ hiddenfield }}
+                {% endfor %}
+                {% include 'touglates/form_field.html' with field=articleeventdateform.whendate %}
+                {% include 'touglates/form_field.html' with field=articleeventdateform.whentime %}
+                {% include 'touglates/form_field.html' with field=articleeventdateform.timelen %}
+                {% include 'touglates/form_field.html' with field=articleeventdateform.DELETE %}
+              </div>
+            {% else %}
+              <div class="articleeventdateformsetform articleeventdatenewform" >
+                {% for hiddenfield in articleeventdateform.hidden_fields %}
+                  {{ hiddenfield }}
+                {% endfor %}
+                {% include 'touglates/form_field.html' with field=articleeventdateform.whendate %}
+                {% include 'touglates/form_field.html' with field=articleeventdateform.whentime %}
+                {% include 'touglates/form_field.html' with field=articleeventdateform.timelen %}
+                {% include 'touglates/form_field.html' with field=articleeventdateform.DELETE %}
+              </div>
+            {% endif %}
+          {% endfor %}
+          <table>
+            {% for articleeventdate in object.articleeventdate_set.all %}
+              <tr id="tr_articleeventdate_{{ articleeventdate.id }}">
+                <td><button type="button" id="button_editarticleeventdate_{{ articleeventdate.id }}" data-formid="div_articleeventdateform_{{ articleeventdate.id }}" data-displayid="tr_articleeventdate_{{ articleeventdate.id }}" class="articleeventdate_edit_button">edit</button></td><td>{{ articleeventdate.when }}</td><td>{{ articleeventdate.text }}</td><td>{{ articleeventdate.is_major_current }}</td>
+              </tr>
+            {% endfor %}
+            <tr>
+              <td><button type="button" id="button_addarticleeventdate">Add</button></td><td span="*"></td>
+            </tr>
+          </table>    
+            {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Save and Continue</button>' %}
+        </form>
+        <script>
+            let articleeventdateEditButtons = document.getElementsByClassName('articleeventdate_edit_button')
+            for( articleeventdateEditButton of articleeventdateEditButtons) {
+                articleeventdateEditButton.addEventListener('click', function(e){
+                    e.preventDefault()
+                    enableFormsetForm(e.target.dataset.formid, e.target.dataset.displayid)
+                })
             }
-        return controlIds[modelName]
-    }
-  </script>
-
-    </script>
+            document.getElementById('button_addarticleeventdate').addEventListener('click', function(e){
+                e.preventDefault()
+                let newforms = document.getElementsByClassName('articleeventdatenewform')
+                if( newforms.length > 0) {
+                    let newform = newforms[0]
+                    newform.style.display="block"
+                    newform.classList.remove('articleeventdatenewform')
+                } else {
+                    alert('please save before adding more notes')
+                }
+            })
+        </script>
+    </div>
 {% endblock %}
