--- a/templates/tougcomsys/firsthome/article_form_page2.html
+++ b/templates/tougcomsys/firsthome/article_form_page2.html
@@ -27,7 +27,8 @@
         <div id="div_featured_image">
             {% include 'touglates/form_field.html' with field=form.featured_image label_tag=formfeatured_image.label_tag %}
         </div>
-        {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Save and Continue</button>' %}
+        {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save and </button>' field_2='<select name="save_go"><option value="0">Stay Here</option><option value="prev">Go to page 1</option><option value="next" selected>Continue</option></select>' %}
+
     </form>
     </div>
     <script>
