--- a/templates/tougcomsys/firsthome/article_form_page4.html
+++ b/templates/tougcomsys/firsthome/article_form_page4.html
@@ -57,7 +57,7 @@
         <td span="*"></td>
       </tr>
     </table>
-    {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Save and Continue</button>' %}
+    {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save and </button>' field_2='<select name="save_go"><option value="stay">Stay Here</option><option value="prev">Go to page 3</option><option value="3">View Article</option></select>' %}
   </form>
   <script>
     let articleeventdateEditButtons = document.getElementsByClassName('articleeventdate_edit_button')
