--- a/templates/tougcomsys/firsthome/article_form_page1.html
+++ b/templates/tougcomsys/firsthome/article_form_page1.html
@@ -45,7 +45,11 @@
             <div id="div_draft_status">
                 {% include 'touglates/form_field.html' with field=form.draft_status label_tag=form.draft_status.label_tag %}
             </div>
-            {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save and </button>' field_2='<select name="save_go"><option value="stay">Stay Here</option><option value="next" selected>Continue</option></select>' %}
+            <div id="save">
+                {% with aftersave='<select name="aftersave"><option value="stay">And Stay Here</option><option value="next" selected>And Continue</option><option value="view">And View Article</option></select>' %}
+                    {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave %}
+                {% endwith %}
+            </div>
         </form>
     </div>
 
