--- a/templates/tougcomsys/firsthome/article_form_page2.html
+++ b/templates/tougcomsys/firsthome/article_form_page2.html
@@ -6,30 +6,33 @@
     <div class="form">
         {% if form.errors %}{{ form.errors }}{% endif %}
         <form id="frm_article" method="POST">
-        {{ form.media }}
-        {% csrf_token %}
-        {% for field in form.hidden_fields %}
-        {{ field }}
-        {% endfor %}
+            {{ form.media }}
+            {% csrf_token %}
+            {% for field in form.hidden_fields %}
+            {{ field }}
+            {% endfor %}
 
-        <div id="div_list_image">
-            {% include 'touglates/form_field.html' with field=form.list_image label_tag=formlist_image.label_tag %}
-        </div>
-        <div id="div_list_image_location">
-            {% include 'touglates/form_field.html' with field=form.list_image_location label_tag=formlist_image_location.label_tag %}
-        </div>
-        <div id="div_detail_image">
-            {% include 'touglates/form_field.html' with field=form.detail_image label_tag=formdetail_image.label_tag %}
-        </div>
-        <div id="div_detail_image_location">
-            {% include 'touglates/form_field.html' with field=form.detail_image_location label_tag=formdetail_image_location.label_tag %}
-        </div>
-        <div id="div_featured_image">
-            {% include 'touglates/form_field.html' with field=form.featured_image label_tag=formfeatured_image.label_tag %}
-        </div>
-        {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save and </button>' field_2='<select name="save_go"><option value="0">Stay Here</option><option value="prev">Go to page 1</option><option value="next" selected>Continue</option></select>' %}
-
-    </form>
+            <div id="div_list_image">
+                {% include 'touglates/form_field.html' with field=form.list_image label_tag=formlist_image.label_tag %}
+            </div>
+            <div id="div_list_image_location">
+                {% include 'touglates/form_field.html' with field=form.list_image_location label_tag=formlist_image_location.label_tag %}
+            </div>
+            <div id="div_detail_image">
+                {% include 'touglates/form_field.html' with field=form.detail_image label_tag=formdetail_image.label_tag %}
+            </div>
+            <div id="div_detail_image_location">
+                {% include 'touglates/form_field.html' with field=form.detail_image_location label_tag=formdetail_image_location.label_tag %}
+            </div>
+            <div id="div_featured_image">
+                {% include 'touglates/form_field.html' with field=form.featured_image label_tag=formfeatured_image.label_tag %}
+            </div>
+            <div id="save">
+                {% with aftersave='<select name="aftersave"><option value="prev">And Go to Previous</option><option value="stay">And Stay Here</option><option value="next" selected>And Continue</option><option value="view">And View Article</option></select>' %}
+                    {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave %}
+                {% endwith %}
+            </div>
+        </form>
     </div>
     <script>
         addRelatedPopupButton( 'id_list_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
