--- a/templates/tougcomsys/firsthome/article_form_page3.html
+++ b/templates/tougcomsys/firsthome/article_form_page3.html
@@ -59,7 +59,12 @@
         <td span="*"></td>
       </tr>
     </table>
-    {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save and </button>' field_2='<select name="save_go"><option value="stay">Stay Here</option><option value="prev">Go to page 2</option><option value="next" selected>Continue</option></select>' %}
+    <div id="save">
+      {% with aftersave='<select name="aftersave"><option value="prev">And Go to Previous</option><option value="stay">And Stay Here</option><option value="next" selected>And Continue</option><option value="view">And View Article</option></select>' %}
+          {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave %}
+      {% endwith %}
+    </div>
+
   </form>
   <script>
     let placementEditButtons = document.getElementsByClassName('placement_edit_button')
