--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -83,6 +83,7 @@
             <div>
                 {% if user.is_authenticated %}
                 <a href="{% url 'logout' %}?next={{ request.path }}">Log Out</a>
+                <a href="{% url 'tougcomsys:article_list' %}">Articles</a>
                 {% else %}
                 <a href="{% url 'login' %}?next={{ request.path }}">Log in</a>
                 {% endif %}
